small fixed cumulative loyaut shift

--- a/src/index.sass
+++ b/src/index.sass
@@ -7,6 +7,7 @@
   font-weight: 400
   min-height: 100%
   color-scheme: light dark
+  font-display: swap
 
   background-color: var(--background-color)
   color: var(--text-color)
@@ -59,6 +60,9 @@ ul
   list-style-type: none
 p
   margin-bottom: 0px
+img, video
+  width: 100%
+  height: auto
 
 @media (prefers-color-scheme: light)
   :root
